# AUR_C_UTIL

./: CMakeLists.txt  言.md
src/: test.c
src/util/aur_util/: aur_util.c  aur_util.h
